[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.17.73",
    "numpy>=2.0.2",
    "polars>=1.34.0",
    "pymongo>=4.15.3",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
