[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "openbb>=4.1.3",
    "pandas-datareader>=0.10.0",
    "polars>=1.34.0",
    "pymongo>=4.15.3",
    "scipy>=1.13.1",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
